--- a/_data/glossary/radical009.yaml
+++ b/_data/glossary/radical009.yaml
@@ -1,5 +1,6 @@
 headwords:
   - cjk: 人
+    strokes: 0
     terms:
       - cjk: 人
         sanskrit: null
@@ -8,6 +9,7 @@ headwords:
         usage: '<span lang="ch">佛在拘薩羅國人間遊行</span><br/>"the Buddha was in Kauśala touring among <strong>the people</strong>"'
         passages: <em>DA</em> <a href="../01_dirgha/DA.29.html#ch.1">29.1</a>
   - cjk: 佛
+    strokes: 5
     terms:
       - cjk: 佛
         sanskrit: buddha
