--- a/_data/glossary/radical018.yaml
+++ b/_data/glossary/radical018.yaml
@@ -6,8 +6,9 @@ headwords:
     strokes: 2
     terms:
       - cjk: 分
-        sanskrit:
-        pali:
-        english: n. <em>part (division of a text)</em>.
-        usage: '<span lang="ch">第三分露遮經第十</span><br/>“Third <strong>Part</strong>, tenth sutra: Lohiccha.”'
-        passages: <em>DA</em> <a href="../01_dirgha/DA.29.html#en.0">29</a>.
+        senses:
+          - english: n. <em>part (division of a text)</em>.
+            usage: '<span lang="ch">第三分露遮經第十</span><br/>“Third <strong>Part</strong>, tenth sutra: Lohiccha.”'
+            sanskrit: null
+            pali: null
+            passages: <em>DA</em> <a href="../01_dirgha/DA.29.html#en.0">29</a>.
