--- a/_data/glossary/radical032.yaml
+++ b/_data/glossary/radical032.yaml
@@ -6,8 +6,9 @@ headwords:
     strokes: 3
     terms:
       - cjk: 在
-        sanskrit:
-        pali:
-        english: v. <em>to be (present)</em>.
-        usage: '<span lang="ch">佛在拘薩羅國人間遊行</span><br/>“The Buddha <strong>was in</strong> Kauśala touring among the people.“'
-        passages: <em>DA passim</em>.
+        senses:
+          - english: 'v. <em>to be (present)</em>. Meaning: A verb of existence, especially in a particular place. Usu. takes a locative object or phrase.'
+            usage: '<span lang="ch">佛在拘薩羅國人間遊行</span><br/>“The Buddha <strong>was in</strong> Kauśala touring among the people.”'
+            sanskrit: viharati
+            pali: null
+            passages: <em>DA</em> 29.1.
