--- a/_data/glossary/radical001.yaml
+++ b/_data/glossary/radical001.yaml
@@ -6,8 +6,9 @@ headwords:
     strokes: 0
     terms:
         - cjk: 一時
-          sanskrit: ekaṃ samayam
-          pali: null
-          english: n. <em>one time</em>.
-          usage: '<span lang="ch">如是我聞:一時</span><br/>“Thus I have heard: one time...”'
-          passages: <em>DA passim</em>.
+          senses:
+            - english: 'n. <em>one time</em>. On a particular occasion or one time out of many.'
+              usage: '<span lang="ch">一時，佛在拘薩羅國人間遊行</span><br/>“<strong>One time</strong>, the Buddha was in Kauśala touring among the people.”'
+              sanskrit: ekasmin samaye
+              pali: ekaṃ samayaṃ
+              passages: <em>DA</em> 29.1.
