--- a/_data/glossary/radical038.yaml
+++ b/_data/glossary/radical038.yaml
@@ -6,8 +6,9 @@ headwords:
     strokes: 3
     terms:
       - cjk: 如是
-        sanskrit: evam
-        pali: evam
-        english: adv. <em>thus</em>, pn. <em>such</em>.
-        usage: '<span lang="ch">如是我聞</span><br/>"Thus I have heard..."'
-        passages: <em>DA passim</em>.
+        senses:
+          - english: 'adv. <em>thus</em>, pron. <em>such</em>.'
+            usage: '<span lang="ch">如是我聞</span><br/>"<strong>Thus</strong> I have heard..."'
+            sanskrit: evaṃ
+            pali: evaṃ
+            passages: <em>DA</em> 29.1.
