--- a/_data/glossary/radical064.yaml
+++ b/_data/glossary/radical064.yaml
@@ -6,8 +6,9 @@ headwords:
     strokes: 5
     terms:
       - cjk: 拘薩羅國
-        sanskrit:
-        pali:
-        english: translit. <em>Kauśala</em>. Lit. <em>country of Kauśala</em>, <span lang="ch">國</span> is added for clarity.
-        usage: '<span lang="ch">佛在拘薩羅國人間遊行</span><br/>“The Buddha was in <strong>Kauśala</strong> touring among the people.”'
-        passages: '<em>DA</em> 7, 26, and <a href="../01_dirgha/DA.29.html#en.1">29.1</a>.'
+        senses:
+          - english: translit. <em>Kauśala</em>. Lit. <em>country of Kauśala</em>, <span lang="ch">國</span> is added by the Chinese translator for clarity.
+            usage: '<span lang="ch">佛在拘薩羅國人間遊行</span><br/>“The Buddha was in <strong>Kauśala</strong> touring among the people.”'
+            sanskrit: Kauśala
+            pali: Kosala
+            passages: '<em>DA</em> 7, 26, and <a href="../01_dirgha/DA.29.html#en.1">29.1</a>.'
