--- a/_data/glossary/radical118.yaml
+++ b/_data/glossary/radical118.yaml
@@ -6,14 +6,16 @@ headwords:
     strokes: 5
     terms:
       - cjk: 第十
-        sanskrit:
-        pali:
-        english: n. <em>tenth</em>.
-        usage:
-        passages:
+        senses:
+          - english: n. <em>tenth</em>.
+            sanskrit: null
+            pali: null
+            usage: null
+            passages: null
       - cjk: 第三
-        sanskrit:
-        pali:
-        english: n. <em>third</em>.
-        usage:
-        passages:
+        senses:
+          - english: n. <em>third</em>.
+            sanskrit: null
+            pali: null
+            usage: null
+            passages: null
