Changed presentation of SA to include new table of contents based on Yinshun's reconstruction. From now on, SA has subfolders for each samyukta. Also began inputting new segmented data format with SA sutras in SA 1, but template will need to be altered to read it.

--- a/_data/source/SA/SA13.3.yaml
+++ b/_data/source/SA/SA13.3.yaml
@@ -38,7 +38,7 @@ paragraphs:
       - id: 'SA13.3:3.3'
         content: '如實知者，是則正見。'
       - id: 'SA13.3:3.4'
-        '正見者，能起正志、正語、正業、正命、正方便、正念、正定。'
+        content: '正見者，能起正志、正語、正業、正命、正方便、正念、正定。'
   - taisho_line: 198c10
     segments:
       - id: 'SA13.3:4.1'
