Got the sutra include processing the paragraph.content sutras and the paragraph.segments sutras. Added numbers to the sutra titles as well. Now I can progressing convert to segmented files.

--- a/_data/DA_29_en_Lohitya.yaml
+++ b/_data/DA_29_en_Lohitya.yaml
@@ -1,6 +1,6 @@
 collection: The Long Discourses
 number: 29
-title: Lohitya
+title: 29. Lohitya
 translator: Charles Patton
 revised: 11 October 2019
 sections:
