--- a/_data/MA_002_en_Parijata_Tree.yaml
+++ b/_data/MA_002_en_Parijata_Tree.yaml
@@ -1,6 +1,6 @@
 collection: The Medium Discourses
 number: 2
-title: The Pārijāta Tree
+title: 2. The Pārijāta Tree
 translator: Charles Patton
 revised: 27 May 2019
 sections:
