--- a/_data/MA_004_en_Water_Parable.yaml
+++ b/_data/MA_004_en_Water_Parable.yaml
@@ -1,6 +1,6 @@
 collection: The Medium Discourses
 number: 4
-title: The Water Parable
+title: 4. The Water Parable
 translator: Charles Patton
 revised: 27 May 2019
 sections:
