--- a/_data/MA_006_en_Good_Persons_Departure.yaml
+++ b/_data/MA_006_en_Good_Persons_Departure.yaml
@@ -1,6 +1,6 @@
 collection: The Medium Discourses
 number: 6
-title: The Good Person’s Departure
+title: 6. The Good Person’s Departure
 translator: Charles Patton
 revised: 13 July 2019
 sections:
