--- a/_data/MA_007_en_Worldly_Merit.yaml
+++ b/_data/MA_007_en_Worldly_Merit.yaml
@@ -1,6 +1,6 @@
 collection: The Medium Discourses
 number: 7
-title: Worldly Merit
+title: 7. Worldly Merit
 translator: Charles Patton
 revised: 15 August 2019
 sections:
