--- a/_data/MA_001_en_Good_Dharma.yaml
+++ b/_data/MA_001_en_Good_Dharma.yaml
@@ -1,6 +1,6 @@
 collection: The Medium Discourses
 number: 1
-title: The Good Dharma
+title: 1. The Good Dharma
 translator: Charles Patton
 revised: 27 May 2019
 sections:
