--- a/_data/MA_003_en_City_Parable.yaml
+++ b/_data/MA_003_en_City_Parable.yaml
@@ -2,7 +2,7 @@ collection: The Medium Discourses
 number: 3
 translator: Charles Patton
 revised: 27 May 2019
-title: The City Parable
+title: 3. The City Parable
 sections:
   - paragraphs:
     - taishoref: '0422c10'
