--- a/_data/MA_005_en_Wood_Pile_Parable.yaml
+++ b/_data/MA_005_en_Wood_Pile_Parable.yaml
@@ -1,6 +1,6 @@
 collection: The Medium Discourses
 number: 5
-title: The Wood Pile Parable
+title: 5. The Wood Pile Parable
 translator: Charles Patton
 revised: 4 July 2019
 sections:
