--- a/_data/SA_f28_748-796_en.yaml
+++ b/_data/SA_f28_748-796_en.yaml
@@ -1,7 +1,7 @@
 collection: The Related Discourses
 fascicle: 28
 748:
-    title: 'The First Sign'
+    title: '1. The First Sign'
     number: 748
     translator: Charles Patton
     revised: 13 August 2019
@@ -19,7 +19,7 @@ fascicle: 28
       - num: 1
         content: 'This discourse is parallel to <em>SN</em> 45.55 <em>Yonisomanasikārasampadā</em>, sharing the metaphor of the rising sun and identifying right view as the forerunner of the eightfold path.'
 749:
-    title: 'Forerunners'
+    title: '2. Forerunners'
     number: 749
     translator: Charles Patton
     revised: 13 August 2019
@@ -37,7 +37,7 @@ fascicle: 28
       - num: 1
         content: 'This is a close parallel with the Pali <em>SN</em> 45.1 Avijjā.'
 750:
-    title: 'The Roots of Good and Bad'
+    title: '3. The Roots of Good and Bad'
     number: 750
     translator: Charles Patton
     revised: 13 August 2019
@@ -54,7 +54,7 @@ fascicle: 28
         - taishoref: '198c13'
           content: 'After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.'
 751:
-    title: 'The Right Undertaking'
+    title: '4. The Right Undertaking'
     number: 751
     translator: Charles Patton
     revised: 14 October 2019
@@ -86,7 +86,7 @@ fascicle: 28
       - num: 1
         content: 'This sūtra is a close parallel with SN.45.24 Dutiyapaṭipadā, but the Pali does not include a verse summary.'
 752:
-    title: 'Desire'
+    title: '5. Desire'
     number: 752
     translator: Charles Patton
     revised: 14 August 2019
@@ -118,7 +118,7 @@ fascicle: 28
       - num: 1
         content: 'This sūtra is a close parallel to <em>SN</em> 45.30 Uttiya, but in the Pali version the interlocutor is Uttiya. Kāma may be the same monk known as Kāmabhū in other Pali sources, but the name is apropos to the subject of the discourse, too. The Pali follows a different presentation of the same meaning and lacks summary verses.'
 753:
-    title: 'Deathlessness'
+    title: '6. Deathlessness'
     number: 753
     translator: Charles Patton
     revised: 16 August 2019
@@ -142,7 +142,7 @@ fascicle: 28
       - num: 2
         content: 'The Chinese translates amṛta as ‘sweet dew’ <span class="ch">甘露</span>, which was a mythical substance considered to be parallel to the Indian concept of soma that was the food of the gods.'
 754:
-    title: 'Requirements of Concentration'
+    title: '7. Roots and Requirements'
     number: 754
     translator: Charles Patton
     revised: 16 August 2019
@@ -157,7 +157,7 @@ fascicle: 28
         - taishoref: '199b01'
           content: 'After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.'
 755:
-    title: ''
+    title: '8.'
     number: 755
     translator: Charles Patton
     revised: 13 August 2019
@@ -175,7 +175,7 @@ fascicle: 28
       - num: 1
         content: ''
 756:
-    title: ''
+    title: '9.'
     number: 756
     translator: Charles Patton
     revised: 13 August 2019
@@ -193,7 +193,7 @@ fascicle: 28
       - num: 1
         content: ''
 757:
-    title: ''
+    title: '10.'
     number: 757
     translator: Charles Patton
     revised: 13 August 2019
@@ -211,7 +211,7 @@ fascicle: 28
       - num: 1
         content: ''
 758:
-    title: 'The Fear of Losing Mother or Son'
+    title: '11. The Fear of Losing Mother or Son'
     number: 758
     translator: Charles Patton
     revised: 26 August 2019
@@ -249,7 +249,7 @@ fascicle: 28
       - num: 1
         content: 'This sutra is a close parallel with AN.3.62 Bhaya. The Chinese terms for “fear of lacking a mother or son” and “fear of having a mother or son” are identical to the Pali when literally read. The three explanations are also very close to the Pali, but in a different order.'
 759:
-    title: 'Three Sensations'
+    title: '12. Three Sensations'
     number: 759
     translator: Charles Patton
     revised: 27 August 2019
@@ -271,7 +271,7 @@ fascicle: 28
       - num: 1
         content: 'This sutra is parallel to <em>SN</em> 45.29 Vedanā.'
 760:
-    title: 'Three Disagreeable Things'
+    title: '13. Three Disagreeable Things'
     number: 760
     translator: Charles Patton
     revised: 27 August 2019
@@ -291,7 +291,7 @@ fascicle: 28
       - num: 1
         content: 'This sutra’s introduction is parallel to Pali <em>AN</em> 10.76, but it lacks the remainder of that sutta. Another difference is that the Pali lists birth, old age, and death as the three disagreeable things.'
 761:
-    title: 'Learners and Non-Learners'
+    title: '14. Learners and Non-Learners'
     number: 761
     translator: Charles Patton
     revised: 27 August 2019
