Fixed a typo reproduced in SA 1.1-4.

--- a/_data/SA_1_3_en.yaml
+++ b/_data/SA_1_3_en.yaml
@@ -40,7 +40,7 @@ sections:
     - taisho_line: 1a14
       segments:
         - id: 'SA1.3:4.1'
-          content: '“So it is, monks, that if someone whose mind is liberated went to realize it himself, then he can realize it: '
+          content: '“So it is, monks, that if someone whose mind is liberated wants to realize it himself, then he can realize: '
         - id: 'SA1.3:4.2'
           content: '‘My births have ended; the religious practice has been established; and the task has been done.’ '
         - id: 'SA1.3:4.3'
