--- a/_data/SA_1_1_en.yaml
+++ b/_data/SA_1_1_en.yaml
@@ -41,7 +41,7 @@ sections:
     - taisho_line: 1a12
       segments:
         - id: 'SA1.1:4.1'
-          content: '“So it is, monks, that if someone whose mind is liberated went to realize it himself, then he can realize it: '
+          content: '“So it is, monks, that if someone whose mind is liberated wants to realize it himself, then he can realize: '
         - id: 'SA1.1:4.2'
           content: '‘My births have ended; the religious practice has been established; and the task has been done.’ '
         - id: 'SA1.1:4.3'
