--- a/_data/SA_1_4_ch.yaml
+++ b/_data/SA_1_4_ch.yaml
@@ -1,7 +1,7 @@
 collection: 雜阿含經
 group: 1. 陰
 title: 4. 非我
-yinshun_no: 2
+yinshun_no: 4
 taisho_vol: 2
 taisho_text: 99
 taisho_fascicle: 1
@@ -9,11 +9,12 @@ taisho_no: n/a
 parallels:
   - pali: 'SN 22.14'
   - pali: 'SN 22.51'
+  - chinese: 'SA 2.4'
 paragraphs:
   - taisho_line: 1a14
     segments:
       - id: 'SA1.4:1.1'
-        content: '如是我聞：'
+        content: '如是我聞：<sup class="noteref">1</sup> '
       - id: 'SA1.4:1.2'
         content: '一時，佛住舍衛國祇樹給孤獨園。'
   - taisho_line: 1a14
@@ -23,7 +24,7 @@ paragraphs:
       - id: 'SA1.4:2.2'
         content: '「當觀色非我。'
       - id: 'SA1.4:2.3'
-        content: '如是觀者，則為正觀。'
+        content: '如是觀者，則為正見。'
       - id: 'SA1.4:2.4'
         content: '正觀者，則生厭離。'
       - id: 'SA1.4:2.5'
@@ -35,7 +36,7 @@ paragraphs:
       - id: 'SA1.4:3.1'
         content: '「如是觀受、想、行、識非我。'
       - id: 'SA1.4:3.2'
-        content: '如是觀者，則為正觀。'
+        content: '如是觀者，則為正見。'
       - id: 'SA1.4:3.3'
         content: '正觀者，則生厭離。'
       - id: 'SA1.4:3.4'
