--- a/_data/SA_1_1_ch.yaml
+++ b/_data/SA_1_1_ch.yaml
@@ -9,6 +9,7 @@ taisho_no: 1
 parallels:
   - pali: 'SN 22.12'
   - pali: 'SN 22.51'
+  - chinese: 'SA 2.1'
 paragraphs:
   - taisho_line: 1a06
     segments:
@@ -23,7 +24,7 @@ paragraphs:
       - id: 'SA1.1:2.2'
         content: '「當觀色無常。'
       - id: 'SA1.1:2.3'
-        content: '如是觀者，則為正觀。'
+        content: '如是觀者，則為正見<sup class="noteref">1</sup>。'
       - id: 'SA1.1:2.4'
         content: '正觀者，則生厭離。'
       - id: 'SA1.1:2.5'
@@ -35,7 +36,7 @@ paragraphs:
       - id: 'SA1.1:3.1'
         content: '「如是觀受、想、行、識無常。'
       - id: 'SA1.1:3.2'
-        content: '如是觀者，則為正觀。'
+        content: '如是觀者，則為正見。'
       - id: 'SA1.1:3.3'
         content: '正觀者，則生厭離。'
       - id: 'SA1.1:3.4'
@@ -57,11 +58,11 @@ paragraphs:
   - taisho_line: 1a14
     segments:
       - id: 'SA1.1:6.1'
-        content: '「如觀無常，苦、空、非我亦復如是。」'
+        content: '「如觀無常，苦、空、非我亦復如是。」<sup class="noteref">2</sup>'
 notes:
   - id: 'SA1.1:2.3'
-    content: '正觀. Yinshun amends 觀 to 見 in this sutra, citing the almost identical passage at <em>SN</em> 22.51 and the commentary in the YCB. I’m not entirely convinced since 正觀 occurs in numerous passages throughout SA.'
+    content: '正見. Yinshun amends 觀 to 見 here and in the next paragraph, citing the almost identical passage at <em>SN</em> 22.51 and the commentary in the YCB. SA 2.1 agrees with 正見, too.'
   - id: 'SA1.1:6.1'
-    content: 'This abbreviation note occurs inside <em>SA</em> 1.1, suggesting that the sutras should be expanded with three additional sections. However, as Yinshun points out, the uddana at 1c20 suggests that the first section has four sutras on right contemplation of the five aggregates, not one. I’ve amended the text to place the comment after <em>SA</em> 1.1’s conclusion.'
+    content: 'This abbreviation note occurs inside <em>SA</em> 1.1 in the Taisho, suggesting that this sutra should be expanded with three additional sections. However, as Yinshun points out, the uddana at 1c20 suggests that the first section has four sutras on right contemplation of the five aggregates, not one. I’ve amended the text to place the comment after <em>SA</em> 1.1’s conclusion.'
 editor: Charles Patton
-revised: 22-10-2019
+revised: 27-10-2019
