--- a/_data/SA_1_2_ch.yaml
+++ b/_data/SA_1_2_ch.yaml
@@ -9,11 +9,12 @@ taisho_no: n/a
 parallels:
   - pali: 'SN 22.13'
   - pali: 'SN 22.51'
+  - chinese: 'SA 2.2'
 paragraphs:
   - taisho_line: 1a14
     segments:
       - id: 'SA1.2:1.1'
-        content: '如是我聞：'
+        content: '如是我聞：<sup class="noteref">1</sup> '
       - id: 'SA1.2:1.2'
         content: '一時，佛住舍衛國祇樹給孤獨園。'
   - taisho_line: 1a14
@@ -23,7 +24,7 @@ paragraphs:
       - id: 'SA1.2:2.2'
         content: '「當觀色苦。'
       - id: 'SA1.2:2.3'
-        content: '如是觀者，則為正觀。'
+        content: '如是觀者，則為正見。'
       - id: 'SA1.2:2.4'
         content: '正觀者，則生厭離。'
       - id: 'SA1.2:2.5'
@@ -35,7 +36,7 @@ paragraphs:
       - id: 'SA1.2:3.1'
         content: '「如是觀受、想、行、識苦。'
       - id: 'SA1.2:3.2'
-        content: '如是觀者，則為正觀。'
+        content: '如是觀者，則為正見。'
       - id: 'SA1.2:3.3'
         content: '正觀者，則生厭離。'
       - id: 'SA1.2:3.4'
@@ -58,4 +59,4 @@ notes:
   - id: 'SA1.2:1.1'
     content: 'This sutra is reconstituted according to the description at 1a14, replacing 無常 with 苦 in SA 1.1.'
 editor: Charles Patton
-revised: 23-10-2019
+revised: 27-10-2019
