--- a/_data/SA_1_2_en.yaml
+++ b/_data/SA_1_2_en.yaml
@@ -4,12 +4,13 @@ title: 2. Painful
 parallels:
   - pali: 'SN 22.13'
   - pali: 'SN 22.51'
+  - chinese: 'SA 2.2'
 sections:
   - paragraphs:
     - taisho_line: 1a14
       segments:
         - id: 'SA1.2:1.1'
-          content: 'Thus have I heard: '
+          content: 'Thus have I heard:<sup class="noteref">1</sup> '
         - id: 'SA1.2:1.2'
           content: 'One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove. '
     - taisho_line: 1a14
@@ -17,41 +18,41 @@ sections:
         - id: 'SA1.2:2.1'
           content: 'It was then that the Bhagavān told the monks: '
         - id: 'SA1.2:2.2'
-          content: '“You must contemplate form as painful. '
+          content: '“You must contemplate form to be painful. '
         - id: 'SA1.2:2.3'
-          content: 'Such contemplation is then right contemplation. '
+          content: 'Such contemplation then is right view. '
         - id: 'SA1.2:2.4'
-          content: 'Someone who rightly contemplates then becomes disillusioned. '
+          content: 'Rightly contemplating it, you’ll become disillusioned. '
         - id: 'SA1.2:2.5'
-          content: 'Being disillusioned, his delight and greed come to an end. '
+          content: 'Being disillusioned, your delight and greed for it will come to an end. '
         - id: 'SA1.2:2.6'
-          content: 'His delight and greed having ended, I say his mind is liberated. '
+          content: 'When your delight and greed for it have ended, I say your mind is liberated. '
     - taisho_line: 1a14
       segments:
         - id: 'SA1.2:3.1'
-          content: '“Thus contemplate feeling, perception, volition, and consciousness as painful. '
+          content: '“Thus contemplate feeling, perception, volition, and consciousness to be painful. '
         - id: 'SA1.2:3.2'
-          content: 'Such contemplation is then right contemplation. '
+          content: 'Such contemplation then is right view. '
         - id: 'SA1.2:3.3'
-          content: 'Someone who rightly contemplates then becomes disillusioned. '
+          content: 'Rightly contemplating it, you’ll become disillusioned. '
         - id: 'SA1.2:3.4'
-          content: 'Being disillusioned, his delight and greed come to an end. '
+          content: 'Being disillusioned, your delight and greed for them will come to an end. '
         - id: 'SA1.2:3.5'
-          content: 'His delight and greed having ended, I say his mind is liberated. '
+          content: 'When your delight and greed for them have ended, I say your mind is liberated. '
     - taisho_line: 1a14
       segments:
         - id: 'SA1.2:4.1'
-          content: '“So it is, monks, that if someone whose mind is liberated wants to realize it himself, then he can realize: '
+          content: '“So it is, monks, that if your mind is liberated and you wants to realize it yourself, then you can realize: '
         - id: 'SA1.2:4.2'
           content: '‘My births have ended; the religious practice has been established; and the task has been done.’ '
         - id: 'SA1.2:4.3'
-          content: 'He himself knows that he will not be subject to a later existence.” '
+          content: 'You yourself will know that you won’t be subject to a later existence.” '
     - taisho_line: 1a14
       segments:
         - id: 'SA1.2:5.1'
           content: 'The monks who heard what the Buddha had taught then rejoiced and handed it down.'
 notes:
   - id: 'SA1.2:1.1'
-    content: 'This sutra is reconstituted according to the description at 1a14, replacing ‘impermanent’ with ‘painful’ in <em>SA</em> 1.1. It’s parallel to <em>SN</em> 22.13 and 22.51.'
+    content: 'This sutra is reconstituted according to the description at 1a14, replacing ‘impermanent’ with ‘painful’ in <em>SA</em> 1.1. It’s parallel to <a href="https://suttacentral.net/sn22.13" target="_blank"><em>SN</em> 22.13</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>.'
 translator: Charles Patton
-revised: 22-10-2019
+revised: 27-10-2019
