--- a/_data/SA_1_3_en.yaml
+++ b/_data/SA_1_3_en.yaml
@@ -33,7 +33,7 @@ sections:
         - id: 'SA1.3:3.2'
           content: 'Such contemplation then is right view. '
         - id: 'SA1.3:3.3'
-          content: 'Rightly contemplating it, you'll become disillusioned. '
+          content: 'Rightly contemplating it, you’ll become disillusioned. '
         - id: 'SA1.3:3.4'
           content: 'Being disillusioned, your delight and greed for them will come to an end. '
         - id: 'SA1.3:3.5'
