Converted SA13.1-3 to the new segmented format in _data and published them.

--- a/_data/SA_13_1_ch.yaml
+++ b/_data/SA_13_1_ch.yaml
@@ -22,7 +22,7 @@ paragraphs:
       - id: 'SA13.1:2.2'
         content: '「如日出前相，謂明相初光。'
       - id: 'SA13.1:2.3'
-        content: '如是比丘，正盡苦邊，究竟苦邊前相者，所謂正見。'
+        content: '如是比丘！正盡苦邊，究竟苦邊前相者，所謂正見。'
       - id: 'SA13.1:2.4'
         content: '彼正見者，能起正志、正語、正業、正命、正方便、正念、正定。'
   - taisho_line: 198b09
@@ -40,4 +40,4 @@ paragraphs:
       - id: 'SA13.1:4.1'
         content: '佛說此經已，諸比丘聞佛所說，歡喜奉行。'
 editor: Charles Patton
-revised: 19-10-2019
+revised: 28-10-2019
