--- a/_data/SA_13_3_en.yaml
+++ b/_data/SA_13_3_en.yaml
@@ -1,55 +1,61 @@
 collection: The Related Discourses
 group: 13. The Noble Path
 title: 3. The Roots of Good and Bad
-paragraphs:
-  - taisho_line: 198b26
-    segments:
-      - id: 'SA13.3:1.1'
-        content: 'Thus have I heard:'
-      - id: 'SA13.3:1.2'
-        content: 'One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.'
-  - taisho_line: 198b27
-    segments:
-      - id: 'SA13.3:2.1'
-        content: 'At that time, the Bhagavān addressed the monks,'
-      - id: 'SA13.3:2.2'
-        content: '“Monks, if evil and unwholesome things arise, they all have ignorance as their root.'
-      - id: 'SA13.3:2.3'
-        content: 'Ignorance collects them, ignorance gives rise to them, and ignorance produces them.'
-      - id: 'SA13.3:2.4'
-        content: 'What is the reason for that?'
-      - id: 'SA13.3:2.5'
-        content: 'That right view can produce right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.'
-      - id: 'SA13.1:2.6'
-        content: 'x'
-      - id: 'SA13.1:2.7'
-        content: 'x'
-  - taisho_line: 198c04
-    segments:
-      - id: 'SA13.1:3.1'
-        content: '“Because it produces concentration and right perception, the noble disciple’s mind is rightly liberated from desire, anger, and delusion.'
-      - id: 'SA13.1:3.2'
-        content: ' His mind thus well liberated, the noble disciple attains right knowledge and sees:'
-      - id: 'SA13.1:3.3'
-        content: '‘My births have ended, the religious practice has been established, and the task has been done.’'
-      - id: 'SA13.1:3:4'
-        content: 'He himself knows that he will not be subject to a later existence.”'
-  - taisho_line: 198c10
-    segments:
-      - id: 'SA13.3:4.1'
-        content: '正定起已，聖弟子得正解脫貪、恚、癡，貪、恚、癡。'
-      - id: 'SA13.3:4.2'
-        content: '解脫已，是聖弟子得正智見：'
-      - id: 'SA13.3:4.3'
-        content: '『我生已盡，梵行已立，所作已作。』'
-      - id: 'SA13.3:4.4'
-        content: '自知不受後有。」'
-  - taisho_line: 198c13
-    segments:
-      - id: 'SA13.3:5.1'
-        content: '佛說此經已，諸比丘聞佛所說，歡喜奉行。'
-notes:
-  - id: 'SA13.1:1'
-    content: 'This discourse is parallel to <em>SN</em> 45.55 <em>Yonisomanasikārasampadā</em>. It shares the metaphor of the rising sun and identifying right view as the forerunner of the eightfold path.'
+sections:
+  - paragraphs:
+    - taisho_line: 198b26
+      segments:
+        - id: 'SA13.3:1.1'
+          content: 'Thus have I heard: '
+        - id: 'SA13.3:1.2'
+          content: 'One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.'
+    - taisho_line: 198b27
+      segments:
+        - id: 'SA13.3:2.1'
+          content: 'It was then that the Bhagavān addressed the monks, '
+        - id: 'SA13.3:2.2'
+          content: '“Monks, if bad and unwholesome things arise, they all have ignorance as their root. '
+        - id: 'SA13.3:2.3'
+          content: 'Ignorance collects them, ignorance gives rise to them, and ignorance produces them. '
+        - id: 'SA13.3:2.4'
+          content: 'What is the reason for that? '
+        - id: 'SA13.3:2.5'
+          content: 'Someone who’s ignorant lacks knowledge. '
+        - id: 'SA13.3:2.6'
+          content: 'Wholesome and <span class="taishoref">[198c]</span> unwholesome things aren’t known as they really are: '
+        - id: 'SA13.3:2.7'
+          content: 'What’s blameworthy and blameless, the lower and higher teachings, what’s stained and stainless, what’s discerned and not discerned, and what’s dependently arisen and not dependently arisen are not known as they really are. '
+        - id: 'SA13.3:2.8'
+          content: 'When you don’t know them as they really are, you’ll produce wrong views. '
+        - id: 'SA13.3:2.9'
+          content: 'When you produce wrong views, you can produce wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration.'
+    - taisho_line: 198c04
+      segments:
+        - id: 'SA13.3:3.1'
+          content: '“If good things arise, they all have understanding as their root. '
+        - id: 'SA13.3:3.2'
+          content: 'Understanding collects them, understanding gives rise to them, and understanding produces them. '
+        - id: 'SA13.3:3.3'
+          content: 'With understanding, you’ll know wholesome and unwholesome things as they really are: '
+        - id: 'SA13.3:3:4'
+          content: 'What’s blameworthy and blameless, those who are friends and not friends, the inferior and superior teachings, what’s polluted and clean, what’s discerned and not discerned, and what’s dependently arisen and not dependently arisen are known as they really are. '
+        - id: 'SA13.3:3:5'
+          content: 'Knowing things as they really are then is right view. '
+        - id: 'SA13.3:3:6'
+          content: 'With right view, you can produce right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.'
+    - taisho_line: 198c10
+      segments:
+        - id: 'SA13.3:4.1'
+          content: '“After right concentration is produced, the noble disciple attains right liberation from desire, anger, and delusion. '
+        - id: 'SA13.3:4.2'
+          content: 'After he’s liberated from desire, anger, and delusion, the noble disciple can rightly know and see: '
+        - id: 'SA13.3:4.3'
+          content: '‘My births have ended; the religious practice has been established; and the task has been done.’ '
+        - id: 'SA13.3:4.4'
+          content: 'He himself knows that he will not be subject to a later existence.”'
+    - taisho_line: 198c13
+      segments:
+        - id: 'SA13.3:5.1'
+          content: 'After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.'
 translator: Charles Patton
-revised: 19-10-2019
+revised: 29-10-2019
