Segmented and edited SA13.4-5. Changed the way verse is parsed by the sutra-verse-en include. Applied a temp fix to MA 7 so its unsegmented verse displays correctly. Typos in DA 27 fixed.

--- a/_data/DA_29_en_Lohitya.yaml
+++ b/_data/DA_29_en_Lohitya.yaml
@@ -2,7 +2,7 @@ collection: The Long Discourses
 number: 29
 title: 29. Lohitya
 translator: Charles Patton
-revised: 11 October 2019
+revised: 31-10-2019
 sections:
   - paragraphs:
     - taishoref: '0112c21'
@@ -23,7 +23,7 @@ sections:
       content: 'The brahmin saw that the Buddha was silent. Once he knew that he had <span class="added">the Buddha’s</span> assent, he rose from his seat, circled the Buddha, and left. He wasn’t far away from the Buddha when a bad view occurred to him: “Mendicants and brahmins often know the good Dharma, and many are their proofs, but they shouldn’t teach it to other people. They simply know it for themselves and desist from discussing it with others. It’s like a man who builds a new prison after he destroys an old prison. It’s a greedy, bad, and unwholesome thing!”'
   - paragraphs:
     - taishoref: '0113a14'
-      content: 'After the brahmin returned to the sal grove, he then prepared a variety of delicious food and drink that night. When he arrvied, the brahmin said to his barber, “Remember my words and go to the rosewood grove. Tell the mendicant Gautama, ‘Once morning has arrived, you should know that it’s time.’"'
+      content: 'After the brahmin returned to the sal grove, he then prepared a variety of delicious food and drink that night. When he arrived, the brahmin said to his barber, “Remember my words and go to the rosewood grove. Tell the mendicant Gautama, ‘Once morning has arrived, you should know that it’s time.’"'
     - taishoref: '0113a18'
       content: 'His barber accepted and performed his instructions. He went to the Buddha and bowed at the Bhagavān’s feet. “Once the day has come, you should know that it’s time.”'
   - paragraphs:
@@ -35,7 +35,7 @@ sections:
       content: 'The Buddha told the barber, “This is only a minor subject that’s easily taught.”'
   - paragraphs:
     - taishoref: '0113a27'
-      content: 'When the Bhagavān arrived at the brahmin’s resdience, he prepared a seat, and sat down. The brahmin then personally served them various delicious foods, providing it to the Buddha and the assembly. When they had finished the meal, left with their bowls, and were done washing them, <span class="taishoref">[113b]</span> they gave a small sofa to the Buddha to sit in front.'
+      content: 'When the Bhagavān arrived at the brahmin’s residence, he prepared a seat, and sat down. The brahmin then personally served them various delicious foods, providing it to the Buddha and the assembly. When they had finished the meal, left with their bowls, and were done washing them, <span class="taishoref">[113b]</span> they gave a small sofa to the Buddha to sit in front.'
     - taishoref: '113b01'
       content: 'The Buddha then told Lohitya, “Yesterday, you weren’t far away after you left when a bad view occurred to you: ‘Mendicants and brahmins often know the good Dharma, and many are their proofs, but they shouldn’t teach it to other people. They simply know it for themselves and desist from discussing it with others. It’s like a man who builds a new prison after he destroys an old prison. It’s a greedy, bad, and unwholesome thing!’ Is that statement true?”'
     - taishoref: '0113b04'
@@ -93,7 +93,7 @@ sections:
     - taishoref: '0114a05'
       content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
     - taishoref: '0114a06'
-      content: '“He’ll fall to an bad destiny.”'
+      content: '“He’ll fall to a bad destiny.”'
   - paragraphs:
     - taishoref: '0114a06'
       content: '“Lohitya, he’s likewise, someone who hears the Dharma and would attain four fruits of a mendicant. Suppose someone prohibits it by saying, ‘Don’t teach the Dharma.’ If those words are put into action, would that person hear the Dharma and attain these fruits?”'
