--- a/_data/MA_007_en_Worldly_Merit.yaml
+++ b/_data/MA_007_en_Worldly_Merit.yaml
@@ -54,28 +54,28 @@ sections:
       content: 'At that time, the Bhagavān spoke in verse:'
     - taishoref: '~0428b24'
       verse:
-        - '“The Gaṅgā River'
-        - 'Is clean and easy to cross;'
-        - 'The ocean with many treasures'
-        - 'Is the king of myriad rivers.'
+        - content: '“The Gaṅgā River'
+        - content: 'Is clean and easy to cross;'
+        - content: 'The ocean with many treasures'
+        - content: 'Is the king of myriad rivers.'
     - taishoref: '~0428b24'
       verse:
-        - 'Like a river’s flow,'
-        - 'A worldly person bows low;'
-        - 'That’s where streams return'
-        - 'As they go forth into the ocean.'
+        - content: 'Like a river’s flow,'
+        - content: 'A worldly person bows low;'
+        - content: 'That’s where streams return'
+        - content: 'As they go forth into the ocean.'
     - taishoref: '~0428b24'
       verse:
-        - 'Such a person'
-        - 'Gives clothes, food, and drink;'
-        - '<span class="taishoref">[428c]</span> Beds, sofas, mats,'
-        - 'And things upon which to sit.'
+        - content: 'Such a person'
+        - content: 'Gives clothes, food, and drink;'
+        - content: '<span class="taishoref">[428c]</span> Beds, sofas, mats,'
+        - content: 'And things upon which to sit.'
     - taishoref: '~0428b24'
       verse:
-        - 'Measureless rewards of merit'
-        - 'Lead him to a marvelous place;'
-        - 'He’s like the river’s flow'
-        - 'Going forth into the ocean.”'
+        - content: 'Measureless rewards of merit'
+        - content: 'Lead him to a marvelous place;'
+        - content: 'He’s like the river’s flow'
+        - content: 'Going forth into the ocean.”'
   - paragraphs:
     - taishoref: '0428c04'
       content: 'The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha had taught rejoiced and handed it down.'
