--- a/_data/SA_13_7_ch.yaml
+++ b/_data/SA_13_7_ch.yaml
@@ -37,12 +37,12 @@ sections:
         - id: 'SA13.7:3.4'
           content: '謂正見、正志、正語、正業、正命、正方便、正念。'
         - id: 'SA13.7:3.5'
-          content: '舍利弗！於此七道分為基業已，得一其心，是名賢聖等三昧根本眾具。」'
+          content: '諸比丘！於此七道分為基業已，得一其心。'
         - id: 'SA13.7:3.6'
-          content: 'x'
+          content: '是名賢聖等三昧根本眾具。」'
     - taisho_line: 199b01
       segments:
         - id: 'SA13.7:4.1'
           content: '佛說此經已，諸比丘聞佛所說，歡喜奉行。'
 editor: Charles Patton
-revised: 31-10-2019
+revised: 1-11-2019
