--- a/_data/SA_13_7_en.yaml
+++ b/_data/SA_13_7_en.yaml
@@ -32,7 +32,7 @@ sections:
         - id: 'SA13.7:3.4'
           content: 'They are right view, right intention, right speech, right action, right livelihood, right effort, and right mindfulness. '
         - id: 'SA13.7:3.5'
-          content: 'Śāriputra, after someone has laid the foundation of these seven factors of the path, they unify of their mind. '
+          content: 'Śāriputra, after someone has laid the foundation of these seven factors of the path, they unify their mind. '
         - id: 'SA13.7:3.6'
           content: 'These are called the roots and many requirements of the nobles’ concentration.”'
     - taisho_line: 199b01
