Edited SA 13.24-30 and added them to SA 13 contents. Also added the samukta headings to each sutra and linked it to the samyukta contents.

--- a/_data/SA_13_24_en.yaml
+++ b/_data/SA_13_24_en.yaml
@@ -16,7 +16,7 @@ sections:
         - id: 'SA13.24:2.1'
           content: 'In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. '
         - id: 'SA13.24:2.2'
-          content: 'The brahmin Jānusoṇi<sup class="noteref">2</sup> was riding a chariot with white horses, and a crowd of many youths were following him. '
+          content: 'The brahmin Jāṇussoṇi<sup class="noteref">2</sup> was riding a chariot with white horses, and a crowd of many youths was following him. '
         - id: 'SA13.24:2.3'
           content: 'The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white wisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. '
         - id: 'SA13.24:2.4'
