Added translation of MA 76, beginning of a proper names index, and other misc. corrections.

--- a/_data/SA_13_6_en.yaml
+++ b/_data/SA_13_6_en.yaml
@@ -51,6 +51,6 @@ notes:
   - id: 'SA13.6:1.1'
     content: 'The Pali parallel is <a href="https://suttacentral.net/sn45.30" target="_blank"><em>SN</em> 45.7</a>. The Pali sutta is only partially parallel, containing a question about the “deathless” and equating it with the end of desire, anger, and delusion.'
   - id: 'SA13.6:2.3'
-    content: 'The Chinese translates amṛta as ‘sweet dew’ <span class="ch">甘露</span>, which was a mythical substance considered to be parallel to the Indian concept of ambrosia, which was the food of the gods that gave them their immortality.'
+    content: 'The Chinese translates amṛta as ‘sweet dew’ <span class="ch">甘露</span>, which was a mythical substance considered to be parallel to the Greek concept of ambrosia, which was the food of the gods that gave them their immortality.'
 translator: Charles Patton
 revised: 31-10-2019
